FIO-2015 Fixed contrast ratio of an asterisk

--- a/src/sass/formio.form.scss
+++ b/src/sass/formio.form.scss
@@ -95,7 +95,7 @@ $autocomplete-in-dialog-z-index: $dialog-z-index + 1000;
 
 .field-required:after, .tab-error::after {
   content:" *";
-  color:red;
+  color:#F00000;
 }
 
 .field-required:after {
